fixat lite margins och fått bort whitespace

--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,32 @@
-/*Finns snyggare sätt att göra med height: 100vh; men vet inte riktigt hur? /Axel */
+/*Finns snyggare sätt att göra med height: 100vh; men vet inte riktigt hur? /Axel 
+
+
+
+*/
 
 * {
   width: 100vw;
+    box-sizing: border-box;
 }
 
-#main-logo-page,
-img {
+body{
+    margin:0;
+    padding:0;
+}
+
+ul {
+    margin-top: 0;
+}
+    
+#main-logo-page {
   height: 100vh;
-  width: 100vw;
+  
   background-color: lightcyan;
+}
+
+#main-logo-page img{
+  height: 100vh;
+  
 }
 
 #about {
@@ -44,7 +62,7 @@ img {
 .portfolioitem img {
   -webkit-filter: blur(2px);
   filter: blur(2px);
-  -webkit-transition: .3s ease-in-out;
+  -webkit-transition: .3s ease-in-out; /* Det tråkiga är att den här ease-grejen kommer in varje gång något händer med bilderna, dvs även om man ändrar storleken på fönstret */
   transition: .3s ease-in-out;
 }
 
